Fixed two minor problems with text wrapping in profile settings and account management

--- a/app/styles/pages/_settings.scss
+++ b/app/styles/pages/_settings.scss
@@ -66,3 +66,6 @@
 .smallest-bottom-margin {
   margin-bottom: 1%;
 }
+.small-left-margin {
+  margin-left: 1%;
+}
